--- a/assets/templates/dashmin-1.0.0/css/style.css
+++ b/assets/templates/dashmin-1.0.0/css/style.css
@@ -80,7 +80,8 @@
 }
 
 .content {
-    margin-left: 250px;
+    /* margin-left: 250px; */
+    width: 100% !important;
     min-height: 100vh;
     background: #FFFFFF;
     transition: 0.5s;
